# fastapi

./: .gitignore  main.py  pyproject.toml  test.db
app/: app.py  schemas.py
